# oekoboiler-api

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt  setup.cfg
src/example/: .example_env  main.py
src/oekoboilerapi/: __init__.py  aylaservice.py  oekoboiler.py
tests/: test_aylaservice.py  test_oekoboiler.py  utils.py
